# BittailorEspIdf

./: .gitignore  README.md  Rakefile  Rakefile copy  workspace.code-workspace
BtApps/BtAppAlarmClock/: .project  CMakeLists.txt  sdkconfig.defaults
BtApps/BtAppAlarmClock/main/: AlarmClockMain.cpp  CMakeLists.txt
BtApps/BtBleAdvertisementsGateway/: .project  CMakeLists.txt  partitions_custom.csv  sdkconfig.defaults
BtApps/BtBleAdvertisementsGateway/main/: Kconfig.projbuild  Main.cpp
BtApps/BtMijiaBleSensorGateway/: .project  CMakeLists.txt  mqttTest.rb  sdkconfig.defaults
BtApps/BtMijiaBleSensorGateway/main/: CMakeLists.txt  Kconfig.projbuild  Main.cpp
BtApps/BtSketchAtcMi/: .project  CMakeLists.txt  sdkconfig.defaults
BtApps/BtSketchAtcMi/main/: Main.cpp  (+1 more)
BtApps/BtSketchEPaper/: .project  CMakeLists.txt  partitions_custom.csv  sdkconfig.defaults
BtApps/BtSketchLedStrip/: .project  CMakeLists.txt  partitions_custom.csv
BtApps/BtSketchOta/: .cproject  .project  CMakeLists.txt
BtCmps/: .cproject  .project  CMakeLists.txt  sdkconfig.defaults
BtCmps/components/BtAlarmClock/: CMakeLists.txt
BtCmps/components/BtAlarmClock/src/Bt/AlarmClock/: AlarmActor.cpp  AlarmActor.h  AlarmController.cpp  AlarmController.h  Buzzer.cpp  Buzzer.h  Clock.cpp  Clock.h  ConfigurationController.cpp  ConfigurationController.h  DisplayBacklight.cpp  DisplayBacklight.h  I_Alarm.h  I_AlarmActor.h  I_Buzzer.h  I_Clock.h  MqttConfigurationConnector.cpp  MqttConfigurationConnector.h  OnceAlarm.cpp  OnceAlarm.h  RepeatingAlarm.cpp  RepeatingAlarm.h  Tag.h
BtCmps/components/BtAlarmClock/test/: CMakeLists.txt
BtCmps/components/BtAlarmClock/test/Bt/AlarmClock/: AlarmControllerTest.cpp  RepeatingAlarmTest.cpp
BtCmps/components/BtCore/: CMakeLists.txt  Kconfig
BtCmps/components/BtCore/src/Bt/Bluetooth/: BleAddress.cpp  BleAddress.h  BleAdvertisement.cpp  BleAdvertisement.h  BleAdvertismentScanner.cpp  BleAdvertismentScanner.h  BleDescriptorInfo.cpp  BleDescriptorInfo.h  BleDeviceInfo.cpp  BleDeviceInfo.h  BleUuid.cpp  BleUuid.h  I_BleAdvertismentScanner.h  I_BleCharacteristic.h  I_BleClient.h  I_BleController.h  I_BleDescriptor.h  I_BleDeviceDiscoveryAgent.h  I_BleService.h
BtCmps/components/BtCore/src/Bt/Concurrency/: BlockingQueue.h  CountdownLatch.cpp  CountdownLatch.h  CountingLatch.cpp  CountingLatch.h  I_ExecutionContext.cpp  I_ExecutionContext.h  I_OnceTimer.h  I_PeriodicTimer.h  I_SchedulingExecutionContext.h  LoopExecutionContext.cpp  LoopExecutionContext.h  SchedulingExecutionContext.cpp  SchedulingExecutionContext.h  SchedulingExecutionContextBase.cpp  SchedulingExecutionContextBase.h  Tag.h  WorkerExecutionContext.cpp  WorkerExecutionContext.h
BtCmps/components/BtCore/src/Bt/Core/: ConstMath.h  I_Time.h  I_Timezone.h  Logging.cpp  Logging.h  Singleton.cpp  Singleton.h  StringBuilder.cpp  StringBuilder.h  StringUtilities.cpp  StringUtilities.h  Timezone.cpp  Timezone.h
BtCmps/components/BtCore/src/Bt/Devices/: EPaper.cpp  EPaper.cpp.v1.bk  EPaper.h  MijiaBle.cpp  MijiaBle.h  Tag.h
BtCmps/components/BtCore/src/Bt/Devices/Xiaomi/: BleDiscoveryAgent.cpp  BleDiscoveryAgent.h  DeviceFactory.cpp  DeviceFactory.h  DeviceInfo.cpp  DeviceInfo.h  HumiditySensor.cpp  HumiditySensor.h  I_Device.h
BtCmps/components/BtCore/src/Bt/Events/: Events.cpp  Events.h  Tag.h
BtCmps/components/BtCore/src/Bt/Network/: I_WiFiController.h  Tag.h
BtCmps/components/BtCore/src/Bt/Peripherals/: I_DigitalIn.h  I_DigitalOut.h  I_PwmOut.h  I_PwmTimer.h  I_RgbLed.h  I_SpiDevice.h  RgbLed.cpp  RgbLed.h  Tag.h
BtCmps/components/BtCore/src/Bt/Protocols/: I_MqttController.h  I_SntpController.h  MqttMessage.h  MqttSubscription.cpp  MqttSubscription.h  Tag.h
BtCmps/components/BtCore/src/Bt/Protocols/Mqtt/: Mqtt.cpp  Mqtt.h
BtCmps/components/BtCore/src/Bt/Storage/: I_NvsRepository.h  Tag.h
BtCmps/components/BtCore/src/Bt/System/: I_System.h
BtCmps/components/BtCore/src/Bt/Ui/: Color.h  I_LedStrip.h
BtCmps/components/BtCore/test/: CMakeLists.txt
BtCmps/components/BtCore/test/Bt/Bluetooth/: BleAddressTest.cpp  BleUuidTest.cpp
BtCmps/components/BtCore/test/Bt/Concurrency/: AtomicTest.cpp  BlockingQueueTest.cpp  CountdownLatchTest.cpp  CountingLatchTest.cpp  ExecutionContextTest.cpp  LoopExecutionContextTest.cpp  SchedulingExecutionContextBaseTest.cpp  WorkerExecutionContextTest.cpp
BtCmps/components/BtCore/test/Bt/Core/: SingletonTest.cpp  TimezoneTest.cpp
BtCmps/components/BtCore/test/Bt/Protocols/Mqtt/: MqttTest.cpp
BtCmps/components/BtCoreEspIdf/: CMakeLists.txt
BtCmps/components/BtCoreEspIdf/src/Bt/Bluetooth/: BleCharacteristic.cpp  BleCharacteristic.h  BleClient.cpp  BleClient.h  BleController.cpp  BleController.h  BleDescriptor.cpp  BleDescriptor.h  BleDeviceDiscoveryAgent.cpp  BleDeviceDiscoveryAgent.h  BleService.cpp  BleService.h  Utilities.cpp  Utilities.h
BtCmps/components/BtCoreEspIdf/src/Bt/Core/: Time.cpp  Time.h
BtCmps/components/BtCoreEspIdf/src/Bt/Events/: DefaultEventLoop.cpp  DefaultEventLoop.h  EventLoopSubscription.cpp  EventLoopSubscription.h  I_EventLoop.h
BtCmps/components/BtCoreEspIdf/src/Bt/Network/: WiFiController.cpp  WiFiController.h
BtCmps/components/BtCoreEspIdf/src/Bt/Peripherals/: DigitalIn.cpp  DigitalIn.h  DigitalOut.cpp  DigitalOut.h  InterruptPushButton.cpp  InterruptPushButton.h  PwmOut.cpp  PwmOut.h  PwmTimer.cpp  PwmTimer.h  SpiDevice.cpp  SpiDevice.h  SpiMaster.cpp  SpiMaster.h
BtCmps/components/BtCoreEspIdf/src/Bt/Protocols/: MqttController.cpp  MqttController.h  SntpController.cpp  SntpController.h
BtCmps/components/BtCoreEspIdf/src/Bt/Storage/: NvsRepository.cpp  NvsRepository.h  VirtualFilesystem.cpp  VirtualFilesystem.h
BtCmps/components/BtCoreEspIdf/src/Bt/System/: OtaUpdate.cpp  OtaUpdate.h  System.cpp  System.h  Vitals.cpp  Vitals.h
BtCmps/components/BtCoreEspIdf/src/Bt/Ui/: LedStrip.cpp  LedStrip.h
BtCmps/main/: CMakeLists.txt  main.cpp
BtCmps/test/: .cproject  .project  CMakeLists.txt
BtHostTests/: .cproject  .project  BtHostTestsMain.cpp  CMakeLists.txt
Tooling/: BittailorEspIdf.code-workspace  Rakefile.rake
(+50 files in other folders)
