idf_component_register(
	SRCS 
		"src/Bt/Bluetooth/BleCharacteristic.cpp"
		"src/Bt/Bluetooth/BleClient.cpp"
		"src/Bt/Bluetooth/BleController.cpp"
		"src/Bt/Bluetooth/BleDescriptor.cpp"
		"src/Bt/Bluetooth/BleDeviceDiscoveryAgent.cpp"
		"src/Bt/Bluetooth/BleService.cpp"
		"src/Bt/Bluetooth/Utilities.cpp"
		"src/Bt/Core/Time.cpp"
		"src/Bt/Events/DefaultEventLoop.cpp"
		"src/Bt/Events/EventLoopSubscription.cpp"
		"src/Bt/Network/WiFiController.cpp"
		"src/Bt/Peripherals/DigitalIn.cpp"
		"src/Bt/Peripherals/DigitalOut.cpp"
		"src/Bt/Peripherals/InterruptPushButton.cpp"
		"src/Bt/Peripherals/PwmOut.cpp"
		"src/Bt/Peripherals/PwmTimer.cpp"
		"src/Bt/Peripherals/SpiDevice.cpp"
		"src/Bt/Peripherals/SpiMaster.cpp"
		"src/Bt/Protocols/MqttController.cpp"
		"src/Bt/Protocols/SntpController.cpp"
		"src/Bt/Storage/NvsRepository.cpp"
		"src/Bt/Storage/VirtualFilesystem.cpp"
	INCLUDE_DIRS "src"
	REQUIRES driver nvs_flash mqtt spiffs BtCore bt
)